<resources>
    <string name="app_name">Avisa</string>
    <string name="ingrese_nombre">Ingrese su nombre</string>
    <string name="ingrese_apellido">Ingrese su apellido</string>
    <string name="ingrese_correo">Ingrese su correo</string>
    <string name="ingese_contra">Ingese su contraseña</string>
    <string name="repita_contra">Repita su contraseña</string>
    <string name="title_activity_menu_conductor">MenuConductor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
