<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroPasajero"
    android:padding="20dp"
    android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="REGISTRO DE PASAJERO"
                    android:textColor="#000000" />


                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/boton_redondo"
                    android:src="@drawable/man2"
                    android:id="@+id/picRegistroPasajero"
                    android:onClick="fotopasajero"
                 />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="349dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes_redondeados"
                android:orientation="vertical">


                <TableLayout
                    android:id="@+id/formRegistroPasajero"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-14dp"
                    android:shrinkColumns="@android:string/selectAll"
                    android:stretchColumns="@android:string/selectAll">

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etNombresPasajero"
                                android:layout_width="300dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:hint="@string/ingrese_nombre"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etApellidosPasajero"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:hint="@string/ingrese_apellido"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCorreoPasajero"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_email"
                                android:hint="@string/ingrese_correo"
                                android:inputType="textEmailAddress"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etpasswordPasajero"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_password"
                                android:hint="@string/ingese_contra"
                                android:inputType="textPassword"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etpassword2Pasajero"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_password"
                                android:hint="@string/repita_contra"

                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/btn_uno_login"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:outlineAmbientShadowColor="@color/gris"
                            android:shadowColor="@color/gris"
                            android:text="REGISTRARME"

                            android:onClick="RegistrarmePasajero"

                            android:textColor="@drawable/txt_btn_uno_login" />
                    </TableRow>


                </TableLayout>


            </LinearLayout>


        </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>