<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegistroConductor"
    android:background="@drawable/header">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="REGISTRO DE CONDUCTOR  DE MICROBUSES"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:orientation="vertical"
                android:paddingBottom="25dp">




                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="140dp"
                    android:layout_height="145dp"
                    android:layout_gravity="center"
                    android:background="@drawable/boton_redondo"
                    android:src="@drawable/driver" />




                <!--
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/driver"
                    android:layout_gravity="center"
                    />-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondeados"
                android:orientation="vertical">


                <TableLayout
                    android:id="@+id/formRegistroConductor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:shrinkColumns="@android:string/selectAll"
                    android:stretchColumns="@android:string/selectAll">

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etNombresConductor"
                                android:layout_width="300dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:hint="@string/ingrese_nombre"
                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etApellidosConductor"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:hint="@string/ingrese_apellido"
                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCorreoConductor"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/ingrese_correo"
                                android:inputType="textEmailAddress"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etpasswordConductor"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/ingese_contra"
                                android:inputType="textPassword"
                                android:theme="@style/Widget.AppCompat.EditText" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>

                    <TableRow>

                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etpassword2Conductor"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/repita_contra"

                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:layout_width="180dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="-200dp"
                            android:entries="@array/conductores" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:text="Trabaja Para: "
                            android:textColor="#000000" />

                    </TableRow>

                    <TableRow android:layout_width="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:background="@color/naranja"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:outlineAmbientShadowColor="@color/gris"
                            android:shadowColor="@color/gris"
                            android:text="REGISTRARME"

                            android:textColor="@color/colorWhite" />
                    </TableRow>
                    <!-- <TableRow android:gravity="center_horizontal"
                        android:layout_marginBottom="10dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="registrarme"
                            android:background="@color/cafe"
                            android:textColor="@color/colorWhite"
                            android:shadowColor="@color/gris"
                            android:outlineAmbientShadowColor="@color/gris"

                            android:foreground="?attr/selectableItemBackgroundBorderless"/>



                    </TableRow>-->


                </TableLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>