<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegistroPropietario"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="REGISTRO DE PROPIETARIO DE MICROBUSES"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/boton_redondo"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/man2"
                    android:onClick="Propietario"
                    android:id="@+id/imgpropietario"
                    />
                <!--
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/driver"
                    android:layout_gravity="center"
                    />-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bordes_redondeados"
                >


                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/formRegistroPropietario"
                    android:shrinkColumns="@android:string/selectAll"
                    android:stretchColumns="@android:string/selectAll"
                    android:layout_gravity="center_horizontal"
                    >
                    <TableRow>
                        <com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputEditText
                                android:hint="@string/ingrese_nombre"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:layout_width="300dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:id="@+id/etNombresPropietario"
                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                    <TableRow>
                        <com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:hint="@string/ingrese_apellido"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:id="@+id/etApellidosPropietario"
                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>
                    <TableRow>
                        <com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_email"
                                android:hint="@string/ingrese_correo"
                                android:id="@+id/etCorreoPropietario"
                                android:theme="@style/Widget.AppCompat.EditText"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>
                    <TableRow>
                        <com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_password"
                                android:hint="@string/ingese_contra"
                                android:id="@+id/etpasswordPropietario"
                                android:theme="@style/Widget.AppCompat.EditText"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>
                    <TableRow>
                        <com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_password"
                                android:hint="@string/repita_contra"
                                android:id="@+id/etpassword2Propietario"

                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </TableRow>


                    <TableRow>
                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:text="REGISTRARME"
                            android:background="@drawable/boton_redondo"
                            android:shadowColor="@color/gris"
                            android:outlineAmbientShadowColor="@color/gris"
                            android:textColor="@color/colorWhite"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:onClick="RegistrarmePropietario"
                            />
                    </TableRow>
                    <!-- <TableRow android:gravity="center_horizontal"
                         android:layout_marginBottom="10dp">
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
                             android:text="registrarme"
                             android:background="@color/cafe"
                             android:textColor="@color/colorWhite"
                             android:shadowColor="@color/gris"
                             android:outlineAmbientShadowColor="@color/gris"
 
                             android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
 
 
                     </TableRow>-->


                </TableLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>